# DaxDataDashboard

./: .dockerignore  .env  .gitignore  README.md  app.py  audit.jsonl  audit_references.py  captain-definition  config.py  data_sources.py  database.py  db.txt  debug_news.py  dockerfile  gdelt_sample.json  generate_risk_signals.py  nlp.py  pyproject.toml  requirements.txt  scrape_company_news.py  scrape_google_search.py  scrape_stock_prices.py  test_api.py
.streamlit/: config.toml
data/: audit_radar.db  company_news.csv  dax_companies.csv  risk_signals.csv  stock_prices.csv  yahoo_ticker_mapping.csv
dax/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
dax/doc/: current-branch-documentation.md  data-flow.md  design-decisions.md  risk-radar-output.md
dax/domain/: isa315_map.yaml
dax/services/: news.py  nlp.py  prices.py  risk.py
diagrams/: data-flow-diagram.md  use-case-diagram.md
doc/: component-diagram.md  data-flow.md  deployment-diagram.md  design-decisions.md
domain/: company_aliases.yaml
outputs/: README.md  app.py  data_sources.py  nlp.py  requirements.txt
outputs/.streamlit/: config.toml
pipeline/: generate_risk_signals.py  scrape_dax_companies.py
scripts/: prewarm.py
services/: db.py  news.py  nlp.py
