[project]
name = "dax-audit-risk-radar"
version = "0.1.0"
description = "Streamlit dashboard for DAX 40 audit risk monitoring with news, prices, and transformer-based risk signals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "langdetect>=1.0.9",
    "pandas>=2.2",
    "plotly>=5.22",
    "pyyaml>=6.0",
    "rapidfuzz>=3.9",
    "reportlab>=4.2",
    "requests>=2.31",
    "sacremoses>=0.1",
    "sentencepiece>=0.2",
    "streamlit>=1.36,<2.0",
    "torch>=2.2",
    "transformers>=4.40,<5.0",
    "yfinance>=0.2.40",
]

[tool.uv]
package = false
